syntax = "proto3";
package com.gw.user.grpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

option java_outer_classname = "UserManagementGrpc";

message UserCreateGrpcRequestDTO {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string dateOfBirth = 5;
  Gender gender = 6;
  string homeCountry = 7;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
  GENDER_OTHER = 3;
}

message FetchUserDetailsByIdGrpcRequestDTO {
  string id = 1;
}

message UserDetailsGrpcResponseDTO {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string id = 6;
  string dateOfBirth = 7;
  Gender gender = 8;
  string homeCountry = 9;
}

service UserService {
  rpc fetchUsersById(FetchUserDetailsByIdGrpcRequestDTO) returns (UserDetailsGrpcResponseDTO);
  rpc createUser(UserCreateGrpcRequestDTO) returns (google.protobuf.Empty);
}
